# META

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pre_submission_check.py  pyproject.toml  requirements.txt
app/: __init__.py  env.py  graders.py  main.py  models.py  tasks.py
scripts/: pre_submission_check.py  push-exclude.txt
server/: app.py
tests/: test_env.py
